--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,9 +8,12 @@
 .header{
     display: flex;
     align-items: center;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: whitesmoke;
     font-size: 20px;
+    top:0;
+    position: sticky;
+    z-index: 2000;
 }
  .header__left{
     flex: 0.4;
@@ -34,7 +37,7 @@
     flex: 0.6;
     justify-content: space-evenly;
     align-items: center;
-    color: white;
+    color: black;
  }
 
  .header__right > a > h3{
